# pytorch_tutorials

./: pyproject.toml
section00_python_basics/: Tutorial3_Numpy.ipynb
section01_numpy_ml/solutions/: Linear_Regression_For_Classification_Solutions.ipynb
section02_pytorch_basics/notebooks/: Tutorial1_Pytorch_Basics.ipynb
section02_pytorch_basics/solutions/: Pytorch2_Linear_Logistic_Regression_For_Classification_Solution.ipynb
section03_pytorch_mlp/notebooks/: Pytorch0_Activation_Functions.ipynb
section05_transfer_learning/notebooks/: Tutorial_Residual_and_Skip_Connections.ipynb
