[project]
name = "pytorch-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython==8.18.1",
    "matplotlib==3.7.1",
    "numpy==1.23.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm==4.66.3",
]
